--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,30 @@
 name = "ComfyUI-SteadyDancer"
 description = "Custom nodes that wrap SteadyDancer I2V generation for ComfyUI."
 version = "0.0.1"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 
-dependencies = [""]
-    
+# Required (ComfyUI may not bundle these)
+dependencies = [
+  "Pillow>=10.0.0",
+  "numpy>=1.23.0",
+  "moviepy>=2.0.0",
+  "torch==2.5.1",
+  "torchvision==0.20.1",
+  "torchaudio==2.5.1",
+  "xformers==0.0.29.post1",
+  "mmengine>=0.10.0,<0.11.0",
+  "mmcv==2.1.0",
+  "mmdet>=3.1.0",
+  "mmpose==1.3.2",
+]
+
+# Manual/optional (install if missing):
+# - wan (SteadyDancer/Wan2.1 package)
+# - flash-attn==2.7.4.post1
+# - xfuser[diffusers,flash-attn]
+
 [project.urls]
 Repository = "https://github.com/1038lab/ComfyUI-SteadyDancer"
-#  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
 PublisherId = "ailab"
