--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,16 @@
-# Core for node import
 Pillow>=10.0.0
 numpy>=1.23.0
-
-# Preprocess video IO
 moviepy>=2.0.0
-decord>=0.6.0
-
-# Upstream SteadyDancer deps (install on GPU env)
 torch==2.5.1
 torchvision==0.20.1
 torchaudio==2.5.1
 xformers==0.0.29.post1
-flash-attn==2.7.4.post1
-xfuser[diffusers,flash-attn]
 mmengine>=0.10.0,<0.11.0
 mmcv==2.1.0
 mmdet>=3.1.0
 mmpose==1.3.2
+
+# Manual/optional
+# wan (SteadyDancer/Wan2.1 package)
+# flash-attn==2.7.4.post1
+# xfuser[diffusers,flash-attn]
